# tokenbudget

./: .env.example  .gitignore  CNAME  LICENSE  NOTICE  README.md  docker-compose.yml  index.html
api/: .env.example  ARCHITECTURE_GUIDE.md  Dockerfile  Procfile  pyproject.toml
api/app/: config.py  database.py  main.py
api/app/alerts/: __init__.py
api/app/jobs/: purge_old_events.py
api/app/lib/: pricing.py  pricing_sync.py  tier_check.py
api/app/middleware/: api_key_auth.py  clerk_auth.py  permissions.py
api/app/models/: __init__.py  alert.py  alert_config.py  api_key.py  base.py  budget.py  event.py  group.py  price_change.py  project.py  project_member.py  subscription.py  team.py  user.py  waitlist.py
api/app/providers/: __init__.py
api/app/routers/: admin_pricing.py  alerts.py  analytics.py  auth.py  budgets.py  events.py  exports.py  groups.py  health.py  keys.py  otlp.py  price_changes.py  pricing.py  projects.py  proxy.py  waitlist.py
api/app/schemas/: __init__.py  alerts.py  analytics.py  auth.py  budgets.py  common.py  events.py  groups.py  keys.py  price_changes.py  projects.py
api/app/services/: alert_dispatcher.py  alert_service.py  analytics_service.py  auth_service.py  budget_service.py  event_service.py  key_service.py  price_monitor.py  project_service.py
api/migrations/: env.py
api/migrations/versions/: 207aa2a0f0c6_add_projects_table_and_project_id_to_.py  20e35eadcde5_initial_schema.py  38ef68bc6659_add_waitlist_table.py  a1b2c3d4e5f6_add_reasoning_tokens_to_events.py  b3c4d5e6f7a8_add_groups_tables.py  b7c8d9e0f1a2_add_price_changes_table.py  c1d2e3f4a5b6_add_user_auth_fields.py  c5e2a6c2703f_add_key_sha256_index_for_fast_auth_.py  d2e3f4a5b6c7_add_project_members_table.py  f34a57eb946e_add_key_security_fields.py
api/tests/: conftest.py  test_alerts.py  test_analytics.py  test_auth.py  test_budgets.py  test_events.py  test_exports.py  test_groups.py  test_guardrails.py  test_health.py  test_keys.py  test_otlp.py  test_price_changes.py  test_pricing.py  test_projects.py  test_proxy.py  test_reasoning_tokens.py  test_security.py  test_waitlist.py
docs/: API.md  (+7 more)
sdk/: README.md  pyproject.toml
sdk/tests/: test_anthropic_provider.py  test_bedrock_provider.py  test_client.py  test_config.py  test_context.py  test_integrations.py  test_openai_provider.py  test_pricing.py  test_transport.py
sdk/tokenbudget/: __init__.py  client.py  config.py  context.py  pricing.py  transport.py  types.py
sdk/tokenbudget/integrations/: __init__.py  langchain.py  llamaindex.py
(+94 files in other folders)
